--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Page Title -->
         <title>Ronny Sabando - Diseñador Web</title>
 
-        <link rel="icon" href="img/favicon.ico">
+        <link rel="icon" href="img/favicon.png">
 		<!-- Meta Description -->
         <meta name="description" content="Blue One Page Creative HTML5 Template">
         <meta name="keywords" content="one page, single page, onepage, responsive, parallax, creative, business, html5, css3, css3 animation">
