--- a/index.html
+++ b/index.html
@@ -65,23 +65,26 @@
 					<!-- /responsive nav button -->
 
 					<!-- logo -->
-                    <a class="navbar-brand" href="#body">
+           <a class="navbar-brand" href="#body">
 						<h1 id="logo">
-							<img src="img/logo.png" alt="Brandi">
+							<img src="img/ronnylogo800x600-white.png" alt="Brandi">
 						</h1>
 					</a>
+
 					<!-- /logo -->
+
                 </div>
 
+
 				<!-- main nav -->
-                <nav class="collapse navbar-collapse navbar-right" role="navigation">
-                    <ul id="nav" class="nav navbar-nav">
-                        <li class="current"><a href="#body">Inicio</a></li>
-                        <li><a href="#features">¿Quiens soy?</a></li>
-                        <li><a href="#works">Trabajos</a></li>
-                        <li><a href="#contact">Contacto</a></li>
-                    </ul>
-                </nav>
+        <nav class="collapse navbar-collapse navbar-right" role="navigation">
+            <ul id="nav" class="nav navbar-nav">
+                <li class="current"><a href="#body">Inicio</a></li>
+                <li><a href="#features">¿Quiens soy?</a></li>
+                <li><a href="#works">Trabajos</a></li>
+                <li><a href="#contact">Contacto</a></li>
+            </ul>
+        </nav>
 				<!-- /main nav -->
 
             </div>
@@ -97,6 +100,7 @@
         ==================================== -->
 
 		<section id="slider">
+
 			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
 				<!-- Indicators bullet -->
@@ -104,23 +108,26 @@
 					<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 					<li data-target="#carousel-example-generic" data-slide-to="1"></li>
 				</ul>
+
 				<!-- End Indicators bullet -->
 
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner" role="listbox">
 
 					<!-- single slide -->
-					<div class="item active" style="background-image: url(img/slider/slide-banner2-72px-1920x1280.jpg);">
-						<div class="carousel-caption">
+					<div class="item active" style="background-image: url(img/slider/slide-banner2-72px-1920x1280-dark.jpg);">
+
+            <div class="carousel-caption">
 							<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Diseño<span> Responsive</span>!</h2>
 							<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/Creatividad</span> en cada trabajo.</h3>
 							<p data-wow-duration="1000ms" class="wow slideInRight animated">Tu imagen dice mas que mil palabras</p>
 
+                        <!-- <img src="img/icono-white-behance-5.png" alt="">
+                        <img src="img/icono-white-linkedin-5.png" alt=""> -->
 							<ul class="social-links text-center">
-								<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
-								<li><a href=""><i class="fa fa-facebook fa-lg"></i></a></li>
-								<li><a href=""><i class="fa fa-google-plus fa-lg"></i></a></li>
-								<li><a href=""><i class="fa fa-dribbble fa-lg"></i></a></li>
+								<li><a href=""><i><img src="img/logos/icono-white-behance-5-400x400.png" alt=""></i></a></li>
+								<li><a href=""><i><img src="img/logos/icono-white-linkedin-5-400x400.png" alt=""></i></a></li>
+
 							</ul>
 						</div>
 					</div>
@@ -128,19 +135,18 @@
 
 					<!-- single slide -->
 
-					<div class="item" style="background-image: url(img/slider/slide-banner2-72px.jpg);">
+					<div class="item" style="background-image: url(img/slider/slide-banner1-72px-1920x1280-dark.jpg);">
 
 						<div class="carousel-caption">
 							<h2 data-wow-duration="500ms" data-wow-delay="500ms" class="wow bounceInDown animated">Contenido de<span> Valor</span>!</h2>
 							<h3 data-wow-duration="500ms" class="wow slideInLeft animated"><span class="color">/Innovacion</span> para tu negocio.</h3>
 							<p data-wow-duration="500ms" class="wow slideInRight animated">Ofrece tus productos y servicios de forma atractiva</p>
 
-							<ul class="social-links text-center">
-								<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
-								<li><a href=""><i class="fa fa-facebook fa-lg"></i></a></li>
-								<li><a href=""><i class="fa fa-google-plus fa-lg"></i></a></li>
-								<li><a href=""><i class="fa fa-dribbble fa-lg"></i></a></li>
-							</ul>
+              <ul class="social-links text-center">
+                <li><a href=""><i><img src="img/logos/icono-white-behance-5-400x400.png" alt=""></i></a></li>
+								<li><a href=""><i><img src="img/logos/icono-white-linkedin-5-400x400.png" alt=""></i></a></li>
+
+              </ul>
 						</div>
 					</div>
 					<!-- end single slide -->
@@ -161,21 +167,32 @@
 
 		<section id="features" class="features">
 			<div class="container">
+        <div class="sec-title text-center mb50 wow slideInRight animated" data-wow-duration="500ms">
+          <h2>Quien soy</h2>
+          <div class="devider"><i class="fa fa-users fa-lg"></i></div>
+        </div>
 				<div class="row">
 
-					<div class="sec-title text-center mb50 wow slideInRight animated" data-wow-duration="500ms">
-						<h2>Quien soy</h2>
-						<div class="devider"><i class="fa fa-users fa-lg"></i></div>
-					</div>
 
-          <div class="sec-sub-title text-center">
-            <h4 class="parrafo1 wow slideInRight animated">Me llamo Ronny Sabando, soy Lcdo. en Diseño web y aplicaciones multimedia.
-            me especializo en el desarrollo de sitios web responsive mediante customización
-            de plantillas, gestores de contenido (Wordpress) y diseño a medida. También he trabajado en proyectos
-          de desarrollo de aplicaciones y videojuegos para plataformas móviles y web.  </h4>
+
+			  <div class="col-md-6" data-wow-duration="1000ms">
+          <div class="quiensoy wow slideInLeft animated">
+            <img src="img/quiensoy.jpg" alt="">
           </div>
+       </div>
 
-				</div>
+      	<div class="col-md-6"  data-wow-duration="500ms">
+          <div class="quiensoy wow slideInRight animated">
+            <div class="sec-sub-title text-center">
+              <h4 class="parrafo1">Me llamo Ronny Sabando, soy Lcdo. en Diseño web y aplicaciones multimedia.
+                me especializo en el desarrollo de sitios web responsive mediante customización
+                de plantillas, gestores de contenido (Wordpress) y diseño a medida. También he trabajado en proyectos
+                de desarrollo de aplicaciones y videojuegos para plataformas móviles y web.  </h4>
+            </div>
+          </div>
+      </div>
+
+        </div>
 			</div>
 		</section>
 
@@ -217,7 +234,7 @@
 			<div class="project-wrapper">
 <div class="container wow fadeInRight animated">
 				<figure class="mix work-item videojuego">
-					<img src="img/works/videojuego-cuadro.jpg" alt="">
+					<img src="img/works/galeria-game1.jpg" alt="">
 					<div class="overlay">
 
 						<h2 class="fancybox" rel="works" title="Ñami Ñam" href="img/works/videojuego-cuadro.jpg">Ñami ñam</h2>
@@ -226,7 +243,7 @@
 				</figure>
 
 				<figure class="mix work-item web">
-					<img src="img/works/web-cuadro.jpg" alt="">
+					<img src="img/works/galeria-web1.jpg" alt="">
 					<div class="overlay">
 
 						<h2 class="fancybox" rel="works" title="Sitio web Ñami ñam" href="img/works/web-cuadro.jpg">Ñami ñam</h2>
@@ -235,7 +252,7 @@
 				</figure>
 
 				<figure class="mix work-item videojuego">
-					<img src="img/works/item-3.jpg" alt="">
+					<img src="img/works/galeria-game4.jpg" alt="">
 					<div class="overlay">
 
 						<h2 class="fancybox" rel="works" title="Videojuego Anibopi" href="img/works/item-3.jpg">Anibopi</h2>
@@ -244,7 +261,7 @@
 				</figure>
 
 				<figure class="mix work-item web">
-					<img src="img/works/item-4.jpg" alt="">
+					<img src="img/works/galeria-web2.jpg" alt="">
 					<div class="overlay">
 
 						<h2 class="fancybox" rel="works" title="Sitio web Ctmas" href="img/works/item-4.jpg">Ctmas</h2>
@@ -253,7 +270,7 @@
 				</figure>
 
 				<figure class="mix work-item videojuego">
-					<img src="img/works/item-5.jpg" alt="">
+					<img src="img/works/galeria-game3.jpg" alt="">
 					<div class="overlay">
 
 						<h2 class="fancybox" rel="works" title="Videojuego T. Valdivia" href="img/works/item-5.jpg">Tesoros de Valdivia</h2>
@@ -295,24 +312,39 @@
 		<section id="contact" class="contact">
 			<div class="container">
 				<div class="row mb50">
-
+          <!-- <div class="espacio2">
+          </div> -->
 					<div class="sec-title text-center mb50 wow fadeInDown animated" data-wow-duration="500ms">
 						<h2>Contacto</h2>
-						<div class="devider"><i class="fa fa-heart-o fa-lg"></i></div>
+						<div class="devider"><i class="fa fa-pencil fa-lg"></i></div>
 					</div>
 
-					<div class="sec-sub-title text-center wow fadeInDown animated" data-wow-duration="1000ms">
-						<p>Tienes alguna duda o quieres contactarte conmigo? envíame un mensaje mediante el siguiente formulario
-            o a traves de mi número de wasap</p>
-					</div>
+<div data-wow-duration="500ms">
+  <div class="whatsapp wow fadeInDown animated">
+    <ul class="social-links text-center">
+      <li><a href=""><i><img src="img/logos/icono-white-whatsapp-5-400x400.png" alt=""></i></a></li>
+      <li><h3>987695650</h3></li>
+    </ul>
+
+  </div>
+  <div class="sec-sub-title wow fadeInDown animated" data-wow-duration="1000ms">
+
+    <p id="parrafocontacto">¿Quieres contactarte conmigo? envíame un mensaje mediante el siguiente formulario
+    o a través de mi número de whatsapp</p>
+
+  </div>
+</div>
+
 
 					<!-- contact address -->
 					<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 wow fadeInLeft animated" data-wow-duration="500ms">
 						<div class="contact-address">
 							<h3>Datos</h3>
+              <p>Correos:</p>
 							<p>rsabando@espol.edu.ec</p>
               <p>rsabando93@gmail.com</p>
-              <p>(+593) 2550589</p>
+              <p>Tel:(+593) 2550589</p>
+              <p>Cel:(+593) 987695650</p>
 							<p>Duran. Ecuador.</p>
 						</div>
 					</div>
@@ -358,27 +390,29 @@
         <!--
         End Contact Us
         ==================================== -->
-
-
+	<div class="espacio2">
+</div>
 		<footer id="footer" class="footer">
 			<div class="container">
 				<div class="row">
           <!-- <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp animated" data-wow-duration="500ms"> -->
 
-					<div class="col-md-4"  data-wow-duration="500ms">
-
-					</div>
+					<div class="col-md-4"  data-wow-duration="500ms">		</div>
 
           <div class="col-md-4 wow fadeInUp animated"  data-wow-duration="500ms">
             <div class="footer-single">
-              <img src="img/footer-logo.png" alt="">
-              <p class="permisos">eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <img src="img/ronnylogo800x600-white.png" alt="">
+              <!-- <p class="permisos">eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
+            </div>
+            <div class="footer-redes">
+              <ul class="social-links">
+                <li><a href=""><i><img src="img/logos/icono-white-behance-2-400x400.png" alt=""></i></a></li>
+                <li><a href=""><i><img src="img/logos/icono-white-linkedin-2-400x400.png" alt=""></i></a></li>
+              </ul>
             </div>
           </div>
-          <div class="col-md-4"  data-wow-duration="500ms">
 
-          </div>
-
+          <div class="col-md-4"  data-wow-duration="500ms"></div>
 
 
 				</div>
