--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 									<textarea name="message" id="message" placeholder="mensaje" class="form-control"></textarea>
 								</div>
 								<div class="input-group">
-									<input type="submit" id="Enviar" class="pull-right" value="Clic para enviar">
+									<button type="button" id="Enviar" class="pull-right" value="Clic para enviar">Enviar </button>
 								</div>
 							</form>
 						</div>
