--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 					<div class="col-lg-8 col-md-9 col-sm-8 col-xs-12 wow fadeInDown animated" data-wow-duration="500ms" data-wow-delay="300ms">
 						<div class="contact-form">
 							<h3>Formulario</h3>
-							<form method="post" action="enviarmensaje.php" id="contact-form">
+							<form method="post" action="" id="contact-form">
 								<div class="input-group name-email">
 									<div class="input-field">
 										<input type="text" name="name" id="name" placeholder="Nombre" class="form-control">
