--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                         <!-- <img src="img/icono-white-behance-5.png" alt="">
                         <img src="img/icono-white-linkedin-5.png" alt=""> -->
 							<ul class="social-links text-center">
-								<li><a href=""><i><img src="img/logos/icono-white-behance-5-400x400.png" alt=""></i></a></li>
-								<li><a href=""><i><img src="img/logos/icono-white-linkedin-5-400x400.png" alt=""></i></a></li>
+								<li><a href="https://www.behance.net/rsabando93acfe" target="_blank"><i><img src="img/logos/icono-white-behance-5-400x400.png" alt=""></i></a></li>
+								<li><a href="https://www.linkedin.com/in/ronny-steven-sabando-lindao-7b0349130" target="_blank"><i><img src="img/logos/icono-white-linkedin-5-400x400.png" alt=""></i></a></li>
 
 							</ul>
 						</div>
@@ -143,8 +143,8 @@
 							<p data-wow-duration="500ms" class="wow slideInRight animated">Ofrece tus productos y servicios de forma atractiva</p>
 
               <ul class="social-links text-center">
-                <li><a href=""><i><img src="img/logos/icono-white-behance-5-400x400.png" alt=""></i></a></li>
-								<li><a href=""><i><img src="img/logos/icono-white-linkedin-5-400x400.png" alt=""></i></a></li>
+                <li><a href="https://www.behance.net/rsabando93acfe" target="_blank"><i><img src="img/logos/icono-white-behance-5-400x400.png" alt=""></i></a></li>
+								<li><a href="https://www.linkedin.com/in/ronny-steven-sabando-lindao-7b0349130" target="_blank"><i><img src="img/logos/icono-white-linkedin-5-400x400.png" alt=""></i></a></li>
 
               </ul>
 						</div>
@@ -408,8 +408,8 @@
             </div>
             <div class="footer-redes">
               <ul class="social-links">
-                <li><a href=""><i><img src="img/logos/icono-white-behance-2-400x400.png" alt=""></i></a></li>
-                <li><a href=""><i><img src="img/logos/icono-white-linkedin-2-400x400.png" alt=""></i></a></li>
+                <li><a href="https://www.behance.net/rsabando93acfe" target="_blank"><i><img src="img/logos/icono-white-behance-2-400x400.png" alt=""></i></a></li>
+                <li><a href="https://www.linkedin.com/in/ronny-steven-sabando-lindao-7b0349130" target="_blank"><i><img src="img/logos/icono-white-linkedin-2-400x400.png" alt=""></i></a></li>
               </ul>
             </div>
           </div>
